.prelude/i-effect/repos/tsgo/testdata/baselines/reference/effect-v4/missingReturnYiesStarGenThis.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/missingReturnYiesStarGenThis.ts(6,9): error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)


==== /.src/missingReturnYiesStarGenThis.ts (1 errors) ====
    import { Effect } from "effect"
    
    export class Test {
        a: number = 42
        shouldComplain = Effect.gen({self: this}, function*(){
            yield* Effect.fail(this.a) // <- should emit an error be return yield*
            ~~~~~
!!! error TS377006: This Effect never succeeds; using `return yield*` preserves a definitive generator exit point for type narrowing and tooling support. effect(missingReturnYieldStar)
        })
    }
